opam-version: "2.0"
maintainer: "guillaume@tarides.com"
authors: [
  "Guillaume Petiot"
]
synopsis: "An OCaml library to access current weather data from OpenWeather"
description: """
"""
license: "ISC"
homepage: ""
dev-repo: ""
bug-reports: ""
doc: ""
depends: [
  "ocaml"
  "dune" {>= "1.1.0"}
  "cohttp-mirage"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
