opam-version: "2.0"
maintainer: "guillaume@tarides.com"
authors: [
  "Guillaume Petiot"
]
synopsis: "An OCaml library to access current weather data from OpenWeather"
license: "ISC"
homepage: "https://github.com/gpetiot/ocaml-weather"
dev-repo: "git+https://github.com/gpetiot/ocaml-weather.git"
bug-reports: "https://github.com/gpetiot/ocaml-weather/issues"
doc: "https://github.com/gpetiot/ocaml-weather"
depends: [
  "ocaml"
  "dune" {>= "1.1.0"}
  "cohttp-mirage"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
